# payload_extract_bot-rs

./: .gitignore  Cargo.toml  README.md  config.toml.example
src/: commands.rs  config.rs  main.rs  patch_boot.rs  payload.rs  tool.rs  utils.rs
