[package]
name = "payload_extract_bot"
version = "0.1.1"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.49.0", features = ["rt-multi-thread", "macros"] }
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
serde_json = "1.0.149"
anyhow = "1.0.100"
zip = "7.1.0"
payload_dumper = "0.8.2"
bytes = "1.11.0"
regex = "1.12.2"
